# Nokia-PK-2025

./: .clang-format  .gitignore
.github/workflows/: ccpp.yml  clang-format.yml
BTS/: bts1380136283_syslog_20250523230657.txt  bts199872547_syslog_20250524152759.txt
UE/: ue123_syslog_20250523230633.txt  ue123_syslog_20250523230821.txt  ue123_syslog_20250523231035.txt  ue123_syslog_20250523231628.txt  ue123_syslog_20250523235553.txt  ue123_syslog_20250524152814.txt  ue123_syslog_20250524152939.txt  ue123_syslog_20250524154542.txt
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  Smsdb.cpp  Smsdb.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  ComposeSmsState.cpp  ComposeSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  DialingState.cpp  DialingState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  RingingState.cpp  RingingState.hpp  TalkingState.cpp  TalkingState.hpp  ViewSmsState.cpp  ViewSmsState.hpp
src/UE/Tests/Application/: ApplicationTestSuite.cpp
src/UE/Tests/Application/Mocks/: IBtsEventsHandlerMock.hpp  IBtsPortMock.cpp  IBtsPortMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp
